feat(condo) DOMA-6330 frontend of meter readings reporting period (#3530)
* feat(condo): DOMA-6330 frontend of meter reporting period

* feat(condo): DOMA-6330 use GraphQlSearchInput to filter properties already used in reporting period

* refactor(condo): DOMA-6330 create and update MeterReportingPeriodForm into a single component

* refactor(condo): DOMA-6330 form values control use ref. Use formInstance to trigger validating

* fix(condo): DOMA-6432 fix select layout

* chore(condo): DOMA-6330 use feature flag to hide it screen

* fix(condo): DOMA-6432 fix lib import

* feat(condo): DOMA-6330 display default meter reporting period in Table

* fix(condo): DOMA-6330 dont display default period if has custom period

* fix(condo): DOMA-6330 add multiple rowSelection. add translates. Add delete button on meter page

* fix(condo): DOMA-6330 fix filters on reporting period page

* feat(condo): DOMA-6330 added quick filter to show only current meter readings on meter page

* chore(condo): DOMA-6330 update callcenter submodule

* refactor(condo): DOMA-6330 rename fields start and finish to startAt... rm field b2cApp

* chore(condo): DOMA-6330 change translates of Table.reportingPeriod

* chore(condo): DOMA-6330 enable feature flag front meter reporting period

* fix(condo): DOMA-6330 rename startAt finishAt to notifyStartDay notifyEndDay

* chore(condo): DOMA-6330 regenerate migration file

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -640,8 +640,14 @@
   "pages.condo.meter.index.PageTitle": "Meters log",
   "pages.condo.meter.index.EmptyList.header": "The list is empty",
   "pages.condo.meter.index.CreateMeterButtonLabel": "Add new meter",
+  "pages.condo.meter.index.QuickFilterOnlyLatest": "Only current readings",
   "pages.condo.meter.index.meterTab": "Submeter log",
   "pages.condo.meter.index.propertyMeterTab": "Meter log",
+  "pages.condo.meter.index.reportingPeriodTab": "Meter readings reporting period",
+  "pages.condo.meter.index.reportingPeriod.EmptyList.create": "Create period",
+  "pages.condo.meter.index.reportingPeriod.defaultPeriod": "By default, the reporting period starts on {startAt} and ends on {finishAt} of each month",
+  "pages.condo.meter.index.reportingPeriod.Table.customPeriod": "For all properties",
+  "pages.condo.meter.index.reportingPeriod.Table.reportingPeriod": "from the {startAt} to the {finishAt} inclusive",
   "pages.condo.meter.Place": "Place",
   "pages.condo.meter.MeterReading": "Reading",
   "pages.condo.meter.MeterReadingDate": "Reading date",
@@ -831,6 +837,7 @@
   "pages.condo.meter.AddMeter": "Add meter",
   "pages.condo.meter.Account": "Account",
   "pages.condo.meter.AccountNumber": "Account number",
+  "pages.condo.meter.Period": "Meter readings reporting period",
   "pages.condo.meter.AccountNumberIsExistInOtherUnit": "Same account number is exist in other unit",
   "pages.condo.meter.NoAccountNumber": "There is no account number",
   "pages.condo.meter.AddAccountDescription": "Add account to be able to create meters for this client",
@@ -872,6 +879,15 @@
   "pages.condo.meter.EndDate": "End date",
   "pages.condo.meter.EnterMeterNumber": "Enter number",
   "pages.condo.meter.EnterPlace": "Enter place",
+  "pages.condo.meter.reportingPeriod.update.ConfirmDeleteTitle": "Delete period?",
+  "pages.condo.meter.reportingPeriod.update.ConfirmDeleteMessage": "The period will be permanently deleted.",
+  "pages.condo.meter.reportingPeriod.create.start": "Beginning of period",
+  "pages.condo.meter.reportingPeriod.create.finish": "End of period",
+  "pages.condo.meter.reportingPeriod.create.organizationPeriod": "For all properties",
+  "pages.condo.meter.reportingPeriod.create.incorrectPeriod": "Finish must be greater than start",
+  "pages.condo.meter.reportingPeriod.create.organizationTooltip": "This period will apply to all properties that do not have a period with a specific address",
+  "pages.condo.meter.reportingPeriod.create.descriptionMessage": "Select all properties or a specific property. Indicate the days of the month on which you accept meter readings against the current period.",
+  "pages.condo.meter.reportingPeriod.create.inputPostfix": "числа каждого месяца включительно",
   "pages.condo.settings.hint.organization": "Organization",
   "pages.condo.settings.hint.ticketPropertyHint": "Property hint",
   "pages.condo.settings.hint.createTicketPropertyHint": "Create ticket hint",
@@ -1159,6 +1175,8 @@
   "meterResource.GasSupply.measure": "cubic meter",
   "contact.AddContact": "Add contact",
   "meter.AddMeterReadings": "Add meter readings",
+  "meter.reportingPeriod.AddMeterReportingPeriod": "Add meter reporting period",
+  "meter.reportingPeriod.EditMeterReportingPeriod": "Edit meter reporting period",
   "meter.modal.ChooseAccountNumber": "Choose account number",
   "meter.modal.CreateAccountNumber": "Create new account number",
   "meter.import.MeterReading.objectsName.many": "Meter readings",
