--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -640,8 +640,14 @@
   "pages.condo.meter.index.PageTitle": "Приборы учета",
   "pages.condo.meter.index.EmptyList.header": "Показания ИПУ пока не добавлены",
   "pages.condo.meter.index.CreateMeterButtonLabel": "Добавить показания",
+  "pages.condo.meter.index.QuickFilterOnlyLatest": "Только актуальные показания",
   "pages.condo.meter.index.meterTab": "Показания ИПУ",
   "pages.condo.meter.index.propertyMeterTab": "Показания ОДПУ",
+  "pages.condo.meter.index.reportingPeriodTab": "Период подачи показаний ИПУ",
+  "pages.condo.meter.index.reportingPeriod.EmptyList.create": "Добавить период",
+  "pages.condo.meter.index.reportingPeriod.defaultPeriod": "По-умолчанию период подачи показаний начинается {startAt} и заканчивается {finishAt} числа каждого месяца",
+  "pages.condo.meter.index.reportingPeriod.Table.customPeriod": "Для всех домов",
+  "pages.condo.meter.index.reportingPeriod.Table.reportingPeriod": "с {startAt} по {finishAt} числа включительно",
   "pages.condo.meter.Place": "Место",
   "pages.condo.meter.MeterReading": "Показание",
   "pages.condo.meter.MeterReadingDate": "Дата снятия",
@@ -831,6 +837,7 @@
   "pages.condo.meter.AddMeter": "Добавить прибор учета",
   "pages.condo.meter.Account": "Лицевой счет",
   "pages.condo.meter.AccountNumber": "Номер лицевого счета",
+  "pages.condo.meter.Period": "Период подачи показаний",
   "pages.condo.meter.AccountNumberIsExistInOtherUnit": "Такой лицевой счет уже есть в другой квартире",
   "pages.condo.meter.NoAccountNumber": "Нет номера лицевого счета",
   "pages.condo.meter.AddAccountDescription": "Добавьте лицевой счет, чтобы иметь возможность создавать приборы учета у этого абонента",
@@ -872,6 +879,15 @@
   "pages.condo.meter.EndDate": "Конечная дата",
   "pages.condo.meter.EnterMeterNumber": "Введите номер",
   "pages.condo.meter.EnterPlace": "Ввести место установки прибора",
+  "pages.condo.meter.reportingPeriod.update.ConfirmDeleteTitle": "Удалить период?",
+  "pages.condo.meter.reportingPeriod.update.ConfirmDeleteMessage": "Период будет удален навсегда.",
+  "pages.condo.meter.reportingPeriod.create.start": "Начало периода",
+  "pages.condo.meter.reportingPeriod.create.finish": "Конец периода",
+  "pages.condo.meter.reportingPeriod.create.organizationPeriod": "Для всех домов",
+  "pages.condo.meter.reportingPeriod.create.incorrectPeriod": "Конец периода должен быть больше начала периода",
+  "pages.condo.meter.reportingPeriod.create.organizationTooltip": "Этот период будет действовать для всех домов, у которых нет периода с определенным адресом",
+  "pages.condo.meter.reportingPeriod.create.descriptionMessage": "Выберите все дома или конкретный дом. Укажите числа месяца, в которые вы принимаете показания ИПУ в счет текущего периода.",
+  "pages.condo.meter.reportingPeriod.create.inputPostfix": "числа каждого месяца включительно",
   "pages.condo.settings.hint.organization": "УК",
   "pages.condo.settings.hint.ticketPropertyHint": "Справка по дому",
   "pages.condo.settings.hint.createTicketPropertyHint": "Создать справку",
@@ -1159,6 +1175,8 @@
   "meterResource.GasSupply.measure": "куб. м.",
   "contact.AddContact": "Добавить жителя",
   "meter.AddMeterReadings": "Подача показаний",
+  "meter.reportingPeriod.AddMeterReportingPeriod": "Добавить период подачи показаний",
+  "meter.reportingPeriod.EditMeterReportingPeriod": "Изменить период подачи показаний",
   "meter.modal.ChooseAccountNumber": "Выбрать ЛС",
   "meter.modal.CreateAccountNumber": "Создать новый лицевой счет",
   "meter.import.MeterReading.objectsName.many": "Показания ИПУ",
