feat(global): DOMA-6604 new headers 💄💄 (#3621)
* refactor(condo): DOMA-6604 refactor header

* fix(ui): DOMA-6604 Space of size 4 included in Space size options

* feat(condo): DOMA-6604 new header (desktop v1)

* feat(condo): DOMA-6604 new header (mobile v1)

* feat(condo): DOMA-6604 add util classnames

* chore(condo): DOMA-6604 fixed import and sync CC (main)

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -13,7 +13,6 @@
   "Avatar": "Avatar",
   "And": "and",
   "Back": "Go back",
-  "baselayout.menuheader.GuestUsername": "GUEST",
   "Cancel": "Cancel",
   "Captcha": "Captcha",
   "Change": "Change",
@@ -994,7 +993,9 @@
   "pages.condo.analytics.TicketAnalyticsPage.NullReplaces.Assignee": "Assignee is not set",
   "pages.condo.analytics.TicketAnalyticsPage.TicketChartView.LoadMoreTitle": "Load more {entity}",
   "pages.condo.phone.table.lastComment": "Last comment",
-  "pages.organizations.CreateOrganizationButtonLabel": "Create organization",
+  "pages.organizations.CreateOrganizationButtonLabel": "Add organization",
+  "pages.organizations.ChooseOrganizationLabel": "Chose organization",
+  "pages.organizations.NoAvailableOrganizations": "No available organizations",
   "pages.organizations.CreateOrganizationModalTitle": "New organization",
   "pages.organizations.CreateOrganizationPlaceholder": "For example, IDACORP, Inc.",
   "pages.organizations.EditOrganizationModalTitle": "Edit organization",
@@ -1500,7 +1501,7 @@
   "tasks.IncidentExportTask.progress.description.completed": "File has been created and will be available in \"Downloads\" section soon",
   "OK": "OK",
   "Title": "Title",
-  "profile": "Profile",
+  "profile": "My profile",
   "profile.Update": "Editing my profile",
   "profile.Employee.Update": "Editing profile",
   "profile.ChangePasswordModalTitle": "change Password",
