--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -13,7 +13,6 @@
   "Avatar": "Аватар",
   "And": "и",
   "Back": "Назад",
-  "baselayout.menuheader.GuestUsername": "гость",
   "Cancel": "Отменить",
   "Captcha": "Капча",
   "Change": "Изменить",
@@ -994,7 +993,9 @@
   "pages.condo.analytics.TicketAnalyticsPage.NullReplaces.Assignee": "Ответственный не назначен",
   "pages.condo.analytics.TicketAnalyticsPage.TicketChartView.LoadMoreTitle": "Загрузить больше {entity}",
   "pages.condo.phone.table.lastComment": "Последний комментарий",
-  "pages.organizations.CreateOrganizationButtonLabel": "Создать организацию",
+  "pages.organizations.CreateOrganizationButtonLabel": "Добавить организацию",
+  "pages.organizations.ChooseOrganizationLabel": "Выберите организацию",
+  "pages.organizations.NoAvailableOrganizations": "Нет доступных организаций",
   "pages.organizations.CreateOrganizationModalTitle": "Создание организации",
   "pages.organizations.CreateOrganizationPlaceholder": "Например, ООО «УК №1»",
   "pages.organizations.EditOrganizationModalTitle": "Редактирование организации",
@@ -1500,7 +1501,7 @@
   "tasks.IncidentExportTask.progress.description.completed": "Файл сформирован и будет автоматически сохранен в загрузках",
   "OK": "Хорошо",
   "Title": "Заголовок",
-  "profile": "Профиль",
+  "profile": "Мой профиль",
   "profile.Update": "Редактирование профиля",
   "profile.Employee.Update": "Редактирование сотрудника",
   "profile.ChangePasswordModalTitle": "Изменение пароля",
