DOMA-6234 team principal analytics (#3619)
* feat(condo): DOMA-0000 mock dashboard page

* feat(condo): DOMA-0000 dashboard preview

* feat(condo): DOMA-0000 dashboard preview

* feat(condo): DOMA-0000 dashboard preview

* feat(condo): DOMA-0000 analytics WIP

* feat(condo): DOMA-6234 payment sum service for analytics

* feat(condo): DOMA-0000 add PaymentChart interface and ui. Add payment query service

* feat(condo): DOMA-0000 aggregate payments on server side

* fix(condo): DOMA-0000 add residents count to a payment total cards

* fix(condo): DOMA-0000 add receipts loader & display incident and ticket quality dashboards

* feat(condo): DOMA-6234 billing receipts chart

* feat(condo): DOMA-6234 ignore zero values at percent calculation

* feat(condo): DOMA-6234 payment by property chart & access check logic init

* feat(condo): DOMA-6234 top values sorting & data table + minor display fixes

* feat(condo): DOMA-6234 add pagination for ticket table

* feat(condo): DOMA-6234 add resident chart & data loader

* feat(condo): DOMA-6234 add deletedAt to filter & boundaryGap prop to charts

* feat(condo): DOMA-6234 clear combined data properly

* feat(condo): DOMA-6234 restrict prev year selection & draw month axis properly

* feat(condo): DOMA-6234 change axisLabel display logic

* feat(condo): DOMA-6234 icon update & some charts optimization

* feat(condo): DOMA-6234 change resident chart type from bar to pie

* feat(condo): DOMA-6234 fix ticket by day chart display

* feat(condo): DOMA-6234 update ticket chart & count residents without additional request

* feat(condo): DOMA-6234 resident count not updated

* refactor(condo): DOMA-6234 split chart to a components & ui enhancements

* refactor(condo): DOMA-6234 split logic of dataMappers & chart views

* fix(condo): DOMA-6234 provide gql return types for overview dashboard api

* fix(condo): DOMA-6234 change empty style for charts

* fix(condo): DOMA-6234 hide f

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1080,6 +1080,22 @@
   "pages.condo.news.notification.success.title" : "News sent",
   "pages.condo.news.notification.success.description" : "Sending can be cancelled within 15 seconds",
   "pages.condo.news.notification.success.button" : "Cancel send",
+  "pages.reports.paymentsTotal": "Payment of receipts",
+  "pages.reports.residentsTitle": "implementation of the mobile app",
+  "pages.reports.incidentsTitle": "Incidents",
+  "pages.reports.incidentsDescription": "based on information from incidents log",
+  "pages.reports.ticketFeedbackCount": "Total feedbacks:",
+  "pages.reports.paymentCount": "Payments count",
+  "pages.reports.paymentsAmountPercent": "Payments received",
+  "pages.reports.paymentsAmount": "Payments sum",
+  "pages.reports.paymentsByProperty": "Payments by property",
+  "pages.reports.residentsWithApp": "Residents in app",
+  "pages.reports.aggregatePeriod.today": "for today",
+  "pages.reports.aggregatePeriod.total": "total",
+  "pages.reports.aggregatePeriod.day": "per day",
+  "pages.reports.aggregatePeriod.week": "per week",
+  "pages.reports.aggregatePeriod.month": "per month",
+  "pages.reports.summary": "Summary",
   "news.fields.units.label": "Flat",
   "news.fields.units.message": "To select flats, delete the selected entrances",
   "news.fields.sections.label": "Entrance",
@@ -1819,6 +1835,7 @@
   "api.miniapp.sendB2CAppPushMessage.DV_VERSION_MISMATCH": "Wrong value for data version number",
   "api.miniapp.sendB2CAppPushMessage.WRONG_SENDER_FORMAT": "Invalid format of \"sender\" field value. {details}",
   "api.miniapp.sendB2CAppPushMessage.APP_IN_BLACK_LIST": "Could not send notifications for the blacklisted app",
+  "api.analytics.overviewDashboard.FEATURE_IS_DISABLED": "This feature is unavailable for your organization",
   "excelExport.header.contacts.forAllTime": "Contacts for all time",
   "excelExport.header.contacts.forPeriod": "Contacts for the period",
   "excelExport.header.newsRecipients": "News recipients",
