--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1080,6 +1080,22 @@
   "pages.condo.news.notification.success.title" : "Новость отправлена",
   "pages.condo.news.notification.success.description" : "Отправку можно отменить в течение 15 секунд",
   "pages.condo.news.notification.success.button" : "Отменить отправку",
+  "pages.reports.paymentsTotal": "Оплата квитанций",
+  "pages.reports.residentsTitle": "Внедрение моб. приложения жителя",
+  "pages.reports.incidentsTitle": "Инциденты",
+  "pages.reports.incidentsDescription": "на основе информации из журнала отключений",
+  "pages.reports.ticketFeedbackCount": "Количество оценок:",
+  "pages.reports.paymentCount": "Количество оплат",
+  "pages.reports.paymentsAmountPercent": "Оплат",
+  "pages.reports.paymentsAmount": "Сумма оплат",
+  "pages.reports.paymentsByProperty": "Оплаты по домам",
+  "pages.reports.residentsWithApp": "Жителей в приложении",
+  "pages.reports.aggregatePeriod.today": "за сегодня",
+  "pages.reports.aggregatePeriod.total": "всего",
+  "pages.reports.aggregatePeriod.day": "за день",
+  "pages.reports.aggregatePeriod.week": "за неделю",
+  "pages.reports.aggregatePeriod.month": "за месяц",
+  "pages.reports.summary": "Сводка",
   "news.fields.units.label": "Помещение",
   "news.fields.units.message": "Чтобы выбрать помещения, удалите выбранные подъезды",
   "news.fields.sections.label": "Подъезд",
@@ -1819,6 +1835,7 @@
   "api.miniapp.sendB2CAppPushMessage.DV_VERSION_MISMATCH": "Неверное значение версии данных",
   "api.miniapp.sendB2CAppPushMessage.WRONG_SENDER_FORMAT": "Неверный формат поля \"sender\"",
   "api.miniapp.sendB2CAppPushMessage.APP_IN_BLACK_LIST": "Невозможно отправить уведомления для приложения, находящегося в блэклисте",
+  "api.analytics.overviewDashboard.FEATURE_IS_DISABLED": "Эта функция недоступна в вашей организации",
   "excelExport.header.contacts.forAllTime": "Контакты за всё время",
   "excelExport.header.contacts.forPeriod": "Контакты за период",
   "excelExport.header.newsRecipients": "Получатели новости",
