--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1493,11 +1493,11 @@
   "tasks.TicketExportTask.progress.title": "Exporting tickets",
   "tasks.TicketExportTask.progress.description.preparing": "Preparing for export",
   "tasks.TicketExportTask.progress.description.processing": "Tickets exported: {exported} from {total}",
-  "tasks.TicketExportTask.progress.description.completed": "File has been created and downloaded was started",
+  "tasks.TicketExportTask.progress.description.completed": "File has been created<br/><a href=\"{url}\" target=\"_blank\">Download</a>",
   "tasks.NewsItemRecipientsExportTask.progress.title": "Exporting news item recipients",
   "tasks.NewsItemRecipientsExportTask.progress.description.preparing": "Preparing for export",
   "tasks.NewsItemRecipientsExportTask.progress.description.processing": "Recipients exported: {exported} from {total}",
-  "tasks.NewsItemRecipientsExportTask.progress.description.completed": "File has been created and downloaded was started",
+  "tasks.NewsItemRecipientsExportTask.progress.description.completed": "File has been created<br/><a href=\"{url}\" target=\"_blank\">Download</a>",
   "tasks.BankSyncTask.file.progress.title": "Importing transactions from file",
   "tasks.BankSyncTask.externalSystem.progress.title": "Importing transactions from SBBOL",
   "tasks.BankSyncTask.progress.description.preparing": "Preparing to import",
@@ -1510,11 +1510,11 @@
   "tasks.ContactExportTask.progress.title": "Exporting contacts",
   "tasks.ContactExportTask.progress.description.preparing": "Preparing to export contacts",
   "tasks.ContactExportTask.progress.description.processing": "Contacts exported: {exported} of {total}",
-  "tasks.ContactExportTask.progress.description.completed": "File has been created and will be available in \"Downloads\" section soon",
+  "tasks.ContactExportTask.progress.description.completed": "File has been created<br/><a href=\"{url}\" target=\"_blank\">Download</a>",
   "tasks.IncidentExportTask.progress.title": "Exporting incidents",
   "tasks.IncidentExportTask.progress.description.preparing": "Preparing to export incidents",
   "tasks.IncidentExportTask.progress.description.processing": "Incidents exported: {exported} of {total}",
-  "tasks.IncidentExportTask.progress.description.completed": "File has been created and will be available in \"Downloads\" section soon",
+  "tasks.IncidentExportTask.progress.description.completed": "File has been created<br/><a href=\"{url}\" target=\"_blank\">Download</a>",
   "OK": "OK",
   "Title": "Title",
   "profile": "My profile",
