fix(condo): DOMA-5006 made "Download" link black (#3668)
* fix(condo): DOMA-5006 made "Download" link black

Refactored building task description.
Changed using raw HTML in i18n translations for task "description.completed" keys.

* fix(condo): DOMA-5006 check publicUrl before displaying download link

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1493,11 +1493,13 @@
   "tasks.TicketExportTask.progress.title": "Exporting tickets",
   "tasks.TicketExportTask.progress.description.preparing": "Preparing for export",
   "tasks.TicketExportTask.progress.description.processing": "Tickets exported: {exported} from {total}",
-  "tasks.TicketExportTask.progress.description.completed": "File has been created<br/><a href=\"{url}\" target=\"_blank\">Download</a>",
+  "tasks.TicketExportTask.progress.description.completed": "File has been created",
+  "tasks.TicketExportTask.progress.description.completed.link.label": "Download",
   "tasks.NewsItemRecipientsExportTask.progress.title": "Exporting news item recipients",
   "tasks.NewsItemRecipientsExportTask.progress.description.preparing": "Preparing for export",
   "tasks.NewsItemRecipientsExportTask.progress.description.processing": "Recipients exported: {exported} from {total}",
-  "tasks.NewsItemRecipientsExportTask.progress.description.completed": "File has been created<br/><a href=\"{url}\" target=\"_blank\">Download</a>",
+  "tasks.NewsItemRecipientsExportTask.progress.description.completed": "File has been created",
+  "tasks.NewsItemRecipientsExportTask.progress.description.completed.link.label": "Download",
   "tasks.BankSyncTask.file.progress.title": "Importing transactions from file",
   "tasks.BankSyncTask.externalSystem.progress.title": "Importing transactions from SBBOL",
   "tasks.BankSyncTask.progress.description.preparing": "Preparing to import",
@@ -1510,11 +1512,13 @@
   "tasks.ContactExportTask.progress.title": "Exporting contacts",
   "tasks.ContactExportTask.progress.description.preparing": "Preparing to export contacts",
   "tasks.ContactExportTask.progress.description.processing": "Contacts exported: {exported} of {total}",
-  "tasks.ContactExportTask.progress.description.completed": "File has been created<br/><a href=\"{url}\" target=\"_blank\">Download</a>",
+  "tasks.ContactExportTask.progress.description.completed": "File has been created",
+  "tasks.ContactExportTask.progress.description.completed.link.label": "Download",
   "tasks.IncidentExportTask.progress.title": "Exporting incidents",
   "tasks.IncidentExportTask.progress.description.preparing": "Preparing to export incidents",
   "tasks.IncidentExportTask.progress.description.processing": "Incidents exported: {exported} of {total}",
-  "tasks.IncidentExportTask.progress.description.completed": "File has been created<br/><a href=\"{url}\" target=\"_blank\">Download</a>",
+  "tasks.IncidentExportTask.progress.description.completed": "File has been created",
+  "tasks.IncidentExportTask.progress.description.completed.link.label": "Download",
   "OK": "OK",
   "Title": "Title",
   "profile": "My profile",
