--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1493,11 +1493,13 @@
   "tasks.TicketExportTask.progress.title": "Выгрузка заявок",
   "tasks.TicketExportTask.progress.description.preparing": "Подготовка к экспорту",
   "tasks.TicketExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
-  "tasks.TicketExportTask.progress.description.completed": "Файл сформирован<br/><a href=\"{url}\" target=\"_blank\">Скачать</a>",
+  "tasks.TicketExportTask.progress.description.completed": "Файл сформирован",
+  "tasks.TicketExportTask.progress.description.completed.link.label": "Скачать",
   "tasks.NewsItemRecipientsExportTask.progress.title": "Выгрузка получателей новости",
   "tasks.NewsItemRecipientsExportTask.progress.description.preparing": "Подготовка к экспорту",
   "tasks.NewsItemRecipientsExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
-  "tasks.NewsItemRecipientsExportTask.progress.description.completed": "Файл сформирован<br/><a href=\"{url}\" target=\"_blank\">Скачать</a>",
+  "tasks.NewsItemRecipientsExportTask.progress.description.completed": "Файл сформирован",
+  "tasks.NewsItemRecipientsExportTask.progress.description.completed.link.label": "Скачать",
   "tasks.BankSyncTask.file.progress.title": "Импорт транзакций из файла",
   "tasks.BankSyncTask.externalSystem.progress.title": "Импорт транзакций из СберБизнес",
   "tasks.BankSyncTask.progress.description.preparing": "Подготовка к импорту",
@@ -1510,11 +1512,13 @@
   "tasks.ContactExportTask.progress.title": "Выгрузка контактов",
   "tasks.ContactExportTask.progress.description.preparing": "Подготовка к экспорту",
   "tasks.ContactExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
-  "tasks.ContactExportTask.progress.description.completed": "Файл сформирован<br/><a href=\"{url}\" target=\"_blank\">Скачать</a>",
+  "tasks.ContactExportTask.progress.description.completed": "Файл сформирован",
+  "tasks.ContactExportTask.progress.description.completed.link.label": "Скачать",
   "tasks.IncidentExportTask.progress.title": "Выгрузка отключений",
   "tasks.IncidentExportTask.progress.description.preparing": "Подготовка к экспорту",
   "tasks.IncidentExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
-  "tasks.IncidentExportTask.progress.description.completed": "Файл сформирован<br/><a href=\"{url}\" target=\"_blank\">Скачать</a>",
+  "tasks.IncidentExportTask.progress.description.completed": "Файл сформирован",
+  "tasks.IncidentExportTask.progress.description.completed.link.label": "Скачать",
   "OK": "Хорошо",
   "Title": "Заголовок",
   "profile": "Мой профиль",
