fix(condo): DOMA-6805 allow user to filter almost all of the dashboard entities by date (#3685)

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1086,7 +1086,7 @@
   "pages.condo.news.notification.success.button" : "Отменить отправку",
   "pages.reports.paymentsTotal": "Оплата квитанций",
   "pages.reports.residentsTitle": "Внедрение моб. приложения жителя",
-  "pages.reports.incidentsTitle": "Инциденты",
+  "pages.reports.incidentsTitle": "Отключения",
   "pages.reports.incidentsDescription": "на основе информации из журнала отключений",
   "pages.reports.ticketFeedbackCount": "Количество оценок:",
   "pages.reports.paymentCount": "Количество оплат",
@@ -1094,11 +1094,6 @@
   "pages.reports.paymentsAmount": "Сумма оплат",
   "pages.reports.paymentsByProperty": "Оплаты по домам",
   "pages.reports.residentsWithApp": "Жителей в приложении",
-  "pages.reports.aggregatePeriod.today": "за сегодня",
-  "pages.reports.aggregatePeriod.total": "всего",
-  "pages.reports.aggregatePeriod.day": "за день",
-  "pages.reports.aggregatePeriod.week": "за неделю",
-  "pages.reports.aggregatePeriod.month": "за {month}",
   "pages.reports.summary": "Сводка",
   "news.fields.units.label": "Помещение",
   "news.fields.units.message": "Чтобы выбрать помещения, удалите выбранные подъезды",
