--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -639,7 +639,8 @@
   "pages.condo.meter.index.PageTitle": "Meters log",
   "pages.condo.meter.index.EmptyList.header": "The list is empty",
   "pages.condo.meter.index.CreateMeterButtonLabel": "Add new meter",
-  "pages.condo.meter.index.QuickFilterOnlyLatest": "Only current readings",
+  "pages.condo.meter.index.QuickFilterOnlyLatest": "Only last readings",
+  "pages.condo.meter.index.QuickFilterOnlyLatestDescription": "If a resident submitted readings more than once in a given period, then in the table you will see only the last sent readings",
   "pages.condo.meter.index.meterTab": "Submeter log",
   "pages.condo.meter.index.propertyMeterTab": "Meter log",
   "pages.condo.meter.index.reportingPeriodTab": "Meter readings reporting period",
