--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -639,7 +639,8 @@
   "pages.condo.meter.index.PageTitle": "Приборы учета",
   "pages.condo.meter.index.EmptyList.header": "Показания ИПУ пока не добавлены",
   "pages.condo.meter.index.CreateMeterButtonLabel": "Добавить показания",
-  "pages.condo.meter.index.QuickFilterOnlyLatest": "Только актуальные показания",
+  "pages.condo.meter.index.QuickFilterOnlyLatest": "Только последние показания",
+  "pages.condo.meter.index.QuickFilterOnlyLatestDescription": "Если житель сдавал показания в заданный период больше одного раза, то в таблице вы увидите только его последние отправленные показания",
   "pages.condo.meter.index.meterTab": "Показания ИПУ",
   "pages.condo.meter.index.propertyMeterTab": "Показания ОДПУ",
   "pages.condo.meter.index.reportingPeriodTab": "Период подачи показаний ИПУ",
