feat(condo): DOMA-6796 make miniapps accessible to all 🤟😎 (#3694)
* refactor(condo): DOMA-6796 removed redundant constants

* feat(condo): DOMA-6796 Added accessibility check in AllMiniApps

* feat(condo): DOMA-6796 Rewrote AllMiniApps filtering and soring logic

* feat(condo): DOMA-6796 migrate side-menu to AllMiniApps

* feat(condo): DOMA-6796 opened /miniapps page for all employees

* feat(condo): DOMA-6796 opened /miniapps/[id]/index page for all employees

* feat(condo): DOMA-6796 opened /miniapps/[id]/about page for all employees

* feat(condo): DOMA-6796 moved creating default roles to afterChange to sync client

* refactor(condo): DOMA-6796 remove redundant refetch

* chore(condo): DOMA-6796 fixed import, schema and added description

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -311,6 +311,7 @@
   "miniapp.connectModal.Finished.withIcon.message": "The new service will appear in the left menu, and will also remain in the «Connected» tab in the «Services» section. To start using it, close this window and click «Open». Thank you for choosing us again.",
   "miniapp.connectModal.InProgress.title": "We'll get back to you shortly",
   "miniapp.connectModal.InProgress.message": "The specialists of the sales and technical support department will consider your application to connect the service soon. Then they will write or call you back to clarify the details.",
+  "miniapp.supportIsNotAllowed": "Access to the app is blocked for support and administration users",
   "MinutesShort": "{minutes} min.",
   "No": "No",
   "RolesAndAccess": "Roles and accesses",
