--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -311,6 +311,7 @@
   "miniapp.connectModal.Finished.withIcon.message": "Новый сервис появится в меню слева, а так же, останется во вкладке «Подключенные» в разделе «Сервисы». Чтобы начать им пользоваться, закройте это окно и нажмите «Открыть». Спасибо, что снова выбрали нас.",
   "miniapp.connectModal.InProgress.title": "Свяжемся с вами в ближайшее время",
   "miniapp.connectModal.InProgress.message": "Скоро специалисты отдела продаж и технической поддержки рассмотрят вашу заявку на подключение сервиса. Затем — напишут или перезвонят, чтобы уточнить детали.",
+  "miniapp.supportIsNotAllowed": "Доступ в приложение заблокирован для пользователей поддержки и администрации",
   "MinutesShort": "{minutes} мин.",
   "No": "Нет",
   "RolesAndAccess": "Роли и доступы",
