DOMA-8886 fixes property documents after design review (#4651)
* fix(condo): DOMA-8886 added max file size validation

* fix(condo): DOMA-8886 added cancel modal

* fix(condo): DOMA-8886 update state of cancel modal

* fix(condo): DOMA-8886 fix date format

* fix(condo): DOMA-8886 do not show cancel modal if user does not fill any fields in upload modal

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -268,6 +268,10 @@
   "documents.uploadDocumentsModal.category.placeholder": "Select Category",
   "documents.uploadDocumentsModal.files.attachMessage": "Attach Files",
   "documents.uploadDocumentsModal.files.maxSizeMessage": "Maximum file size {maxFileSizeInMb} MB",
+  "documents.uploadDocumentsModal.cancelButton": "Cancel",
+  "documents.uploadDocumentsModal.cancel.title": "Changed your mind about uploading documents?",
+  "documents.uploadDocumentsModal.cancel.message": "If you leave this page, the documents will not be saved.",
+  "documents.uploadDocumentsModal.cancel.dontSave": "Do not save",
   "documents.propertyDocuments.addDocument": "Add Document",
   "documents.propertyDocuments.columns.name": "Name",
   "documents.propertyDocuments.columns.category": "Category",
