--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -268,6 +268,10 @@
   "documents.uploadDocumentsModal.category.placeholder": "Выбор категории",
   "documents.uploadDocumentsModal.files.attachMessage": "Прикрепить файлы",
   "documents.uploadDocumentsModal.files.maxSizeMessage": "Максимальный размер файла {maxFileSizeInMb} МБ",
+  "documents.uploadDocumentsModal.cancelButton": "Отмена",
+  "documents.uploadDocumentsModal.cancel.title": "Передумали загружать документы?",
+  "documents.uploadDocumentsModal.cancel.message": "Если вы уйдете с этой страницы, документы не сохранятся.",
+  "documents.uploadDocumentsModal.cancel.dontSave": "Не сохранять",
   "documents.propertyDocuments.addDocument": "Добавить документ",
   "documents.propertyDocuments.columns.name": "Название",
   "documents.propertyDocuments.columns.category": "Категория",
