Feat/condo/doma 8971/add two dates to payment model (#4715)
* feat(condo): DOMA-8971 add depositedDate and transferDate to Payment

* feat(condo): DOMA-8971 add depositedDate and transferDate to payments table

* fix(condo): DOMA-8971 return advancedAt

* feat(condo): DOMA-8971 maketypes

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -84,6 +84,8 @@
   "Create": "Create",
   "Created": "Created",
   "CreatedDate": "Creation date",
+  "DepositedDate": "Payment date",
+  "TransferDate": "Transfer date",
   "CreateTicket": "Create ticket",
   "CreateAppeal": "Create new appeal",
   "CreateMeterReading": "Take meter readings",
