--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2501,6 +2501,7 @@
   "api.user.signinResidentUser.TOKEN_NOT_FOUND": "Не удалось войти :( Поробуйте ещё раз или обратитесь в тех-поддержку",
   "api.user.signinResidentUser.UNABLE_TO_CREATE_USER": "Не удалось зарегистрироваться :( Поробуйте ещё раз или обратитесь в тех-поддержку",
   "api.user.registerNewUser.UNABLE_TO_FIND_CONFIRM_PHONE_ACTION": "Что-то пошло не так с подтверждением телефона :( Поробуйте ещё раз или обратитесь в тех-поддержку",
+  "api.user.registerNewUser.NO_CONFIRM_PHONE_ACTION_TOKEN": "Что-то пошло не так с подтверждением телефона :( Поробуйте ещё раз или обратитесь в тех-поддержку",
   "api.user.registerNewUser.USER_WITH_SPECIFIED_PHONE_ALREADY_EXISTS": "Пользователь с таким номером телефона уже есть в системе. Попробуйте войти или восстановить доступ",
   "api.user.registerNewUser.USER_WITH_SPECIFIED_EMAIL_ALREADY_EXISTS": "Пользователь с таким email уже есть в системе. Попробуйте войти или восстановить доступ",
   "api.user.registerNewUser.UNABLE_TO_CREATE_USER": "Не удалось зарегистрировать пользователя :( Поробуйте ещё раз или обратитесь в тех-поддержку",
