--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -398,6 +398,7 @@
   "miniapps.categories.GIS.name": "Government information system",
   "miniapps.categories.SMART_HOME.name": "Smart home",
   "miniapps.categories.BUSINESS_DEVELOPMENT.name": "Business development",
+  "miniapps.categories.FINANCE.name": "Financial services",
   "miniapps.categories.OTHER.name": "Other services",
   "miniapps.labels.FREE.name": "Free",
   "miniapps.labels.DISCOUNT.name": "Discount",
