--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -398,6 +398,7 @@
   "miniapps.categories.GIS.name": "ГИС ЖКХ",
   "miniapps.categories.SMART_HOME.name": "Умный дом",
   "miniapps.categories.BUSINESS_DEVELOPMENT.name": "Развитие бизнеса",
+  "miniapps.categories.FINANCE.name": "Финансовые сервисы",
   "miniapps.categories.OTHER.name": "Другие сервисы",
   "miniapps.labels.FREE.name": "Бесплатно",
   "miniapps.labels.DISCOUNT.name": "Скидка",
