--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2481,7 +2481,7 @@
   "api.meter.registerMetersReadings.ORGANIZATION_NOT_FOUND": "Организация не найдена",
   "api.meter.registerMetersReadings.PROPERTY_NOT_FOUND": "Дом не найден",
   "api.meter.registerMetersReadings.INVALID_METER_VALUES": "Неверные значения: {valuesList}",
-  "api.meter.registerMetersReadings.MULTIPLE_METERS_FOUND": "Найдено несколько {count} счетчиков",
+  "api.meter.registerMetersReadings.MULTIPLE_METERS_FOUND": "Найдено несколько счетчиков ({count})",
   "api.marketplace.MarketCategory.MAXIMUM_DEPTH_REACHED": "Глубина наследования категорий должна быть не больше 2",
   "api.marketplace.MarketCategory.CANNOT_CONNECT_TO_ITSELF": "Нельзя привязать категорию к самой себе",
   "api.contact.exportContactsToExcel.NOTHING_TO_EXPORT": "Не найдено контактов для экспорта",
