--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1677,6 +1677,8 @@
   "meter.import.error.MeterValueInvalid": "Неверное значение в столбце \"{columnName}\", должно быть положительное число",
   "meter.import.error.WrongDateFormatMessage": "Неверное значение даты в столбце \"{columnName}\". Используйте значение с типом Строка в формате \"{format}\", либо значение с типом Дата",
   "meter.import.error.WrongDateOrMonthFormatMessage": "Неверное значение даты в столбце \"{columnName}\". Используйте значение с типом Строка в форматах \"{dateFormat}\" или \"{monthFormat}\" (для указания только месяца); либо значение с типом Дата",
+  "meter.import.error.unknownResourceType": "Неизвестный тип счетчика. Используйте один из списка: {knownList}",
+  "meter.import.error.unknownUnitType": "Неизвестный тип помещения. Используйте один из списка: {knownList}",
   "meter.import.error.ZeroValuesSpecified": "Должно быть указано как минимум одно из показаний",
   "meter.import.error.AccountNumberInvalidValue": "Указан некорректный лицевой счет",
   "meter.import.error.MeterNumberInvalidValue": "Указан некорректный номер счетчика",
